--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -91,6 +91,11 @@ body {
             box-shadow: 0 0 0 4px $white, 0 0 0 5px $green;
         }
 
+        &:hover::before{
+            background-color: $orange;
+            box-shadow: 0 0 0 4px $white, 0 0 0 5px $orange;
+        }
+
         &_1 {
             top: 43px;
             left: 64px;
@@ -250,7 +255,7 @@ body {
 
 .title {
     margin: 0;
-    margin-top: 3.5rem;
+    margin-top: 3.7rem;
     font-family: $font-cormorant;
     font-weight: 700;
     font-size: 8rem;
@@ -288,6 +293,10 @@ body {
     text-decoration: none;
     text-transform: uppercase;
     color: $white;
+
+    &_size-m {
+        padding: 2rem 5rem;
+    }
 }
 
 .offer {
@@ -298,15 +307,15 @@ body {
 
     &__text {
         margin-top: 5.7rem;
+        margin-bottom: 2rem;
         max-width: 700px;
-    }
-
-    &__slider {
-        padding-top: 9.5rem;
-        overflow: hidden;
     }
 }
 
+.slider {
+    overflow: hidden;
+    padding-top: 7.5rem;
+}
 .swiper {
     overflow: initial;
 
@@ -314,8 +323,8 @@ body {
         position: relative;
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
-        height: 520px;
+        justify-content: space-between;
+        min-height: 520px;
         box-sizing: border-box;
         padding: 4rem 3.7rem;
         border: 1px solid rgba($green, .4);
@@ -338,31 +347,27 @@ body {
 
         &:hover {
             box-shadow: 0 0 0 2px rgba($green, .4) inset;
+        }
 
-            &::after {
-                content: '';
-                position: absolute;
-                top: 2px;
-                left: 2px;
-                width: calc(100% - 4px);
-                height: calc(100% - 4px);
-                background-color: rgba($white, 0.55);
-                border-radius: 20px;
-                z-index: -1;
+        &_white {
+            justify-content: flex-end;
+            &:hover {
+                &::after {
+                    content: '';
+                    position: absolute;
+                    top: 2px;
+                    left: 2px;
+                    width: calc(100% - 4px);
+                    height: calc(100% - 4px);
+                    background-color: rgba($white, 0.55);
+                    border-radius: 20px;
+                    z-index: -1;
+                }
             }
         }
 
         &:hover .swiper-slide__hover {
             height: 233px;
-        }
-
-        &__title {
-            margin: 0;
-            font-family: $font-cormorant;
-            font-weight: 700;
-            font-size: 3rem;
-            letter-spacing:0.03rem;
-            line-height: 0.5;
         }
 
         &__hover {
@@ -375,6 +380,30 @@ body {
             margin-bottom: 3.5rem;
             max-width: 265px;
             color: rgba($green, .7);
+        }
+
+        &__title {
+            margin: 0;
+            margin-bottom: 40px;
+            font-family: $font-cormorant;
+            font-weight: 700;
+            font-size: 3rem;
+            letter-spacing:0.03rem;
+            line-height: 0.5;
+        }
+
+        &__description {
+            max-width: 29rem;
+            margin: 0;
+            font-size: 1.8rem;
+            color:rgba($green, .7);
+        }
+
+        &__price {
+            margin: 0;
+            margin-top: auto;
+            margin-bottom: 30px;
+            font-size: 2.4rem;
         }
 
         &__link {
@@ -399,6 +428,35 @@ body {
             }
         }
 
+        &__cover {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+            width: 100%;
+            height: 293px;
+            max-height: 293px;
+            text-align: center;
+        }
+
+        &__img {
+            width: auto;
+        }
+
+        &__inner {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            min-height: 310px;
+            padding-top: 5.5rem;
+            box-sizing: border-box;
+        }
+
+        &__footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
 
     }
 
@@ -426,6 +484,43 @@ body {
     }
 }
 
+.counter {
+    display: flex;
+    &__btn {
+        cursor: pointer;
+        width: 50px;
+        height: 50px;
+        padding: 0;
+        border: 1px solid $green;
+        border-radius: 100%;
+        background-color: transparent;
+        background-repeat: no-repeat;
+        background-position: center center;
+
+    }
+
+    &__minus {
+        pointer-events: none;
+        background-image: url(../images/minus_btn.svg);
+        background-size: 20px 20px;
+        opacity: .4;
+    }
+
+    &__plus {
+        background-image: url(../images/plus_btn.svg);
+        background-size: 20px 20px;
+    }
+
+    &__input {
+        width: 46px;
+        padding: 0;
+        text-align: center;
+        font-size: 2.4rem;
+        border: none;
+
+    }
+}
+
 .about {
     background: url('../images/about.png') no-repeat;
     background-size: cover;
@@ -441,7 +536,7 @@ body {
 
     &__text {
         margin-left: 12rem;
-        max-width: 590px;
+        flex-basis: 590px;
     }
 
     &__list {
@@ -449,6 +544,7 @@ body {
         justify-content: space-between;
         width: 467px;
         margin: 0;
+        padding-left: 0;
         list-style: none;
         
         
@@ -457,7 +553,8 @@ body {
     &__item {
         display: flex;
         flex-direction: column;
-        gap: 2rem;
+        gap: 1.5rem;
+        justify-content: center;
         align-items: center;
         font-family: $font-cormorant;
         font-style: italic;
@@ -494,6 +591,16 @@ body {
                 background-size: 45px 40px;
             }
         }
+    }
+}
+
+.trends {
+    padding-top: 2.5rem;
+    padding-bottom: 200px;
+
+    &__text {
+        margin-top: 4rem;
+        margin-bottom: 1rem;
     }
 }
   
